@@ -28,7 +28,8 @@ export type { GQLEdge } from './graphql/subscription/edgeFragment.types';
 export { GQLViewModifier } from './graphql/subscription/nodeFragment.types';
 export type { GQLNode, GQLNodeStyle } from './graphql/subscription/nodeFragment.types';
 export { BorderNodePosition as BorderNodePosition } from './renderer/DiagramRenderer.types';
-export type { Diagram, NodeData } from './renderer/DiagramRenderer.types';
+export type { Diagram, NodeData, ReactFlowPropsCustomizer } from './renderer/DiagramRenderer.types';
+export { diagramRendererReactFlowPropsCustomizerExtensionPoint } from './renderer/DiagramRendererExtensionPoints';
 export { Label } from './renderer/Label';
 export { useConnectorNodeStyle } from './renderer/connector/useConnectorNodeStyle';
 export { useDrop } from './renderer/drop/useDrop';
